added auth and changed filestructure
